--- a/index6.html
+++ b/index6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML and CSS learning</Html></title>
+    <title>HTML and CSS learning</title>
     <style>
         p{
             background-color:antiquewhite;
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <!--Bock-level elements  -->
+    <!--Block-level elements  -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
