--- a/index8.html
+++ b/index8.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div>
+    <div class="Header" id="Header">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -16,21 +16,22 @@
         </ul>
     </div>
 
-    <div>
-        <h2>Section one</h2>
-        <p>This the first paragraph in <span>section one</span></p>
-        <p>This the second paragraph in <span>section one</span></p>
+    <!-- Sections -->
+    <div id="About" class="card text-center">
+        <h2  class="text-lg">Section one</h2>
+        <p>This the first paragraph in <span class="primary-text">section one</span></p>
+        <p>This the second paragraph in <span class="secondary-text">section one</span></p>
     </div>
 
-    <div>
-        <h2>Section two</h2>
-        <p>This the first paragraph in <span>section two</span></p>
-        <p>This the first paragraph in <span>section two</span></p>
+    <div id="Contact" class="card text-center">
+        <h2 class="text-xl">Section two</h2>
+        <p>This the first paragraph in <span class="primary-text">section two</span></p>
+        <p>This the first paragraph in <span class="secondary-text">section two</span></p>
 
     </div>
 
     <!-- Footer -->
-    <div>
+    <div class="Footer">
         &reg; 2025 Registered
     </div>
 </body>
