--- a/index10.html
+++ b/index10.html
@@ -12,19 +12,31 @@
     <form>
         <div>
             <label for="name">Name</label>
-            <input type="text" id="name" />    
+            <input type="text" id="name" placeholder="Enter Name"
+            name="name"
+            minlength="3"
+            maxlength="8"
+            required />    
         </div>
 
         <br/>
         <div>
             <label for="email">Email</label>
-            <input type="email" id="email" />
+            <input type="email" id="email" placeholder="Enter Email" 
+            name="email"
+            required
+            value="test@yahoo.com"
+            disabled
+            />
         </div>
      <br />
-     
+
         <div>
             <label for="password">Password</label>
-            <input type="password" id="password" />
+            <input type="password" id="password" placeholder="Enter Password"
+            name="password"
+            required 
+            maxlength="8"/>
         </div>
 
     <br />
