Checkboxes allow multiple selections, while Radio Buttons enable selecting only one option from a group in HTML.

--- a/index11.html
+++ b/index11.html
@@ -12,7 +12,7 @@
         <br />
         <select name="prodect" id="product" multiple size="3">
             <option value="iphone">iphone</option>
-            <option value="iMac">IMac</iMac>
+            <option value="iMac">IMac</option>
             <option value="Macbook">Macbook</option>
             <option value="Macbook-pro">Macbook pro</option>
         </select>
