The <datalist> element in HTML provides a list of predefined options for an <input> field, helping users with auto-suggestions.

--- a/index12.html
+++ b/index12.html
@@ -51,7 +51,7 @@
 
         <br/>
         <label for="large">
-            <input type="radio" name="size" id="large" value="large">
+            <input type="radio" name="size" id="large" value="large" />
             Large
         </label>
     </form>
