--- a/CSS/index2.html
+++ b/CSS/index2.html
@@ -12,8 +12,10 @@
 <body>
     <div id="container">
         <div>
-            <h2 class="Sporty">Keep it Sporty</h2>
-            <p>Clothing to keep you active and healthy</p>
+            <h2 class="Sporty">Keep it Sporty.</h2>
+            <p>Clothing to keep you active and healthy.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, atque sed ipsum odit delectus consectetur impedit esse assumenda molestiae error, sequi nam quos dignissimos officiis eos commodi repellendus maiores at.
+            </p>
             <a href="#">View Collection</a>
         </div>
     
