50 - Colors Color Names HEX RGB HSL

--- a/CSS/index2.html
+++ b/CSS/index2.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index2.css">
+    <!-- <link rel="stylesheet" href="./index2.css"> -->
+     <link rel="stylesheet" href="./index2_2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -11,7 +12,8 @@
 </head>
 <body>
     <div id="container">
-        <div>
+
+        <div class="card">
             <h2 class="Sporty">Keep it Sporty.</h2>
             <p>Clothing to keep you active and healthy.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, atque sed ipsum odit delectus consectetur impedit esse assumenda molestiae error, sequi nam quos dignissimos officiis eos commodi repellendus maiores at.
@@ -19,17 +21,22 @@
             <a href="#">View Collection</a>
         </div>
     
-        <div>
+        <div class="card">
             <h2 class="Casual">Keep it Casual</h2>
             <p>Clothing to keep you Comfortable</p>
             <a href="#">View Collection</a>
         </div>
     
-        <div>
+        <div class="card">
             <h2 class="Formal">Keep it Formal</h2>
             <p>Clothing to keep you Sharp</p>
             <a href="#">View Collection</a>
         </div>
+
+        <div class="card-2">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, molestias. Mollitia doloribus eius delectus numquam repudiandae quae beatae veniam dolorum.</p>
+        </div>
+
     </div>
     <br><br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, debitis!
